# zenbt

./: .gitignore  .pre-commit-config.yaml  CNAME  README.md  dev.ipynb  justfile  mkdocs.yml  notebook.ipynb  pyproject.toml  report.html  scanner.py  versions.json
0.15.0/: 404.html  index.html  sitemap.xml
0.15.0/reference/zenbt/__init__/: index.html
0.15.0/reference/zenbt/backtester/: index.html
0.15.0/reference/zenbt/multi_backtest/: index.html
0.15.0/search/: search_index.json
0.16.0/: 404.html  index.html  objects.inv  sitemap.xml
0.16.0/reference/zenbt/__init__/: index.html
0.16.0/reference/zenbt/backtester/: index.html
0.16.0/reference/zenbt/multi_backtest/: index.html
0.17.0/: 404.html  index.html  objects.inv  sitemap.xml
0.17.0/reference/zenbt/__init__/: index.html
0.17.0/reference/zenbt/backtester/: index.html
0.17.0/reference/zenbt/multi_backtest/: index.html
0.17.0/search/: search_index.json
0.18.0/: 404.html  index.html  objects.inv  sitemap.xml
0.18.0/reference/zenbt/__init__/: index.html
0.18.0/reference/zenbt/backtester/: index.html
0.18.0/reference/zenbt/indicators/: index.html
0.18.0/reference/zenbt/multi_backtest/: index.html
0.19.0/: 404.html  index.html  sitemap.xml
0.19.0/reference/zenbt/__init__/: index.html
0.19.0/reference/zenbt/backtester/: index.html
0.19.0/reference/zenbt/indicators/: index.html
0.19.0/reference/zenbt/multi_backtest/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/reference/bench/__init__/: index.html
0.2.0/reference/bench/bt/: index.html
0.2.0/reference/bench/vbt/: index.html
0.2.0/reference/bench/zenbt/: index.html
0.2.0/reference/bench/zenbt_signals/: index.html
0.2.0/reference/data/data/: index.html
0.2.0/reference/grafana/__init__/: index.html
0.2.0/reference/grafana/dashboard/: index.html
0.2.0/reference/grafana/token_manager/: index.html
0.2.0/reference/sdk/base/: index.html
0.2.0/reference/sdk/logger/: index.html
0.2.0/reference/sdk/plotter/: index.html
0.2.0/reference/sdk/stats/: index.html
0.2.0/reference/sdk/trade_record/: index.html
0.2.0/reference/zenbt/__dev/: index.html
0.2.0/reference/zenbt/__init__/: index.html
0.2.0/reference/zenbt/dev_old/: index.html
0.2.0/reference/zenbt/ma_cross/: index.html
0.2.0/reference/zenbt/multi_backtest/: index.html
0.2.0/reference/zenbt/rs/: index.html
0.2.0/search/: search_index.json
0.20.0/: 404.html  index.html  sitemap.xml
0.20.0/reference/zenbt/__init__/: index.html
0.20.0/reference/zenbt/backtester/: index.html
0.20.0/reference/zenbt/indicators/: index.html
0.20.0/reference/zenbt/multi_backtest/: index.html
0.21.0/: 404.html  index.html  sitemap.xml
0.21.0/reference/zenbt/__init__/: index.html
0.21.0/reference/zenbt/backtester/: index.html
0.21.0/reference/zenbt/indicators/: index.html
0.21.0/reference/zenbt/multi_backtest/: index.html
0.22.0/: 404.html  index.html  sitemap.xml
0.22.0/reference/zenbt/__init__/: index.html
0.22.0/reference/zenbt/backtester/: index.html
0.22.0/reference/zenbt/indicators/: index.html
0.22.0/reference/zenbt/multi_backtest/: index.html
0.23.0/: 404.html  index.html  sitemap.xml
0.23.0/reference/zenbt/__init__/: index.html
0.23.0/reference/zenbt/backtester/: index.html
0.25.0/: 404.html  index.html  sitemap.xml
0.27.0/: 404.html  index.html  sitemap.xml
0.28.0/: 404.html  index.html  sitemap.xml
0.29.0/: 404.html  index.html  sitemap.xml
0.30.0/: 404.html  index.html  sitemap.xml
0.31.0/: 404.html  index.html  sitemap.xml
0.31.0/search/: search_index.json
0.32.0/: 404.html  index.html  sitemap.xml
0.33.0/: 404.html  index.html  sitemap.xml
0.34.0/: 404.html  index.html  objects.inv  sitemap.xml
0.35.0/: 404.html  index.html  sitemap.xml
0.36.0/: 404.html  index.html  sitemap.xml
0.37.0/: 404.html  index.html  sitemap.xml
0.38.0/: 404.html  index.html  sitemap.xml
0.39.0/: 404.html  index.html  sitemap.xml
0.39.0/search/: search_index.json
0.40.0/: 404.html  index.html  objects.inv  sitemap.xml
data/: sample_data.csv
docker/: docker-compose.yml
docker/grafana_dashboards/: linux_monitoring.json
docker/grafana_data/: grafana.db
docs/: index.md
examples/: notebook.ipynb
rs/: Cargo.toml
rs/pyi-macros/: README.md
rs/pyi-macros/src/: lib.rs  pyi.rs
rs/src/: lib.rs  pyo3.rs
rs/src/_v0/: backtest.rs  backtest_methods.rs  ohlc.rs  pytests.rs  signals.rs  stats.rs  stats_methods.rs
rs/src/_v0/primitives/: instrument.rs
rs/src/backtest/: backtest.rs  backtest_methods.rs  backtester.rs  helpers.rs  methods.rs  mod.rs  params.rs  shared_state.rs  stats.rs  stats_methods.rs
rs/src/helpers/: create_limit_orders.rs  create_signals.rs  mod.rs  round_value.rs
rs/src/indicators/: cross_above.rs  cross_below.rs  indicator_123.rs  mod.rs
rs/src/sdk/: backtest.rs  backtest_methods.rs  backtest_params.rs  backtest_state.rs  bbo.rs  contract.rs  enums.rs  instrument.rs  mod.rs  ohlc.rs  order.rs  pnl.rs  position.rs  pytests.rs  signal.rs  signals.rs  stats.rs  stats_methods.rs  strategy.rs
rs/src/strategy/: actions.rs  base.rs  mod.rs  strategy.rs
scripts/: dashboard.json  gen_ref_pages.py  grafana.py  scanner.py  setup_rs_in_project.py  setup_rs_in_project.sh
src/_bench/: __init__.py  bt.py  vbt.py  zenbt.py  zenbt_signals.py
src/_dev/: __init__.py  debugging.py  dev.py  indicator.py  mt5.py
src/_dev/pickl/: .gitignore  startegy.py
src/bench/: __init__.py  vbt.py  zenbt.py
src/data/: binance_klines.py  data.py
src/grafana/: dashboard.json  token_manager.py
src/sdk/: base.py  plot_price_at_trade.py  stats.py  trade_record.py
src/strategy/: app.py  atr.py
src/trading_template/: __main__.py
src/zenbt/: __dev.py  __init__.py  __main__.py  agora.py  atr.py  dev.py  ma_cross.py  multi_backtest.py  multi_dev.py  rs.pyi  scanner.py  side_by_side.py
src/zenbt/data/: btc_small.parquet
src/zenbt/sdk/: create_session.py  logger.py  stats.py  trade_record.py
src/zenbt/strategies/: __init__.py
tests/: test_main.py
(+428 files in other folders)
