[project]
name = "zenbt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alpha Zen", email = "" }
]
dependencies = [
    "pyarrow>=17.0.0",
    "rich>=13.8.0",
    "pydantic>=2.8.2",
    "python-okx>=0.3.2",
    "pandas>=2.2.2",
    "numba>=0.60.0",
    "mplfinance>=0.12.10b0",
    "ta-lib>=0.4.32",
    "numpy<2",
    "tradingtoolbox>=0.18.0",
    "tqdm>=4.66.5",
    "binance-historical-data>=0.1.13",
    "python-binance>=1.0.19",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]
"dev" = "zenbt:dev"
# "dev" = "zenbt:ma_cross"

[tool.rye.scripts]
rye_script = {cmd = 'echo hello world'}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pip>=24.2",
    "loguru>=0.7.2",
    "orjson>=3.10.6",
    "pre-commit>=3.7.1",
    "commitizen>=3.27.0",
    "pyright>=1.1.382.post1",
    "ipython<=8.0.0",
    "matplotlib>=3.9.2",
    "ruff>=0.6.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zenbt"]

[tool.maturin]
profile = "release"
python-source = "src"
module-name = 'zenbt.rs'
manifest-path = "rs/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportAttributeAccessIssue = false

[tool.pytest.ini_options]
norecursedirs = ["docker"]

[tool.ruff.lint]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F"]
# Never enforce `E501` (line length violations).
ignore = ["E501", "F401", "F841"]
# Never try to fix `F401` (unused imports).
unfixable = ["F401", "F841"]
