[project]
name = "zenbt"
version = "0.18.0"
description = "Add your description here"
authors = [
    { name = "Alpha Zen", email = "" }
]
dependencies = [
    "pyarrow>=17.0.0",
    "rich>=13.9.2",
    "pydantic>=2.8.2",
    "pandas==2.2.2",
    "numpy<2",
    "tradingtoolbox>=0.44.0",
    "tqdm>=4.66.5",
    "polars>=1.9.0",
    "ta-lib>=0.5.1",
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.scripts]
"dev" = "_dev:dev"
"bench" = "_bench:bench"
"bench_all" = "_bench:bench_all"
# "dev" = "zenbt:dev"

[tool.rye.scripts]
rye_script = {cmd = 'echo hello world'}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "python-okx>=0.1.2",
    "vectorbt>=0.26.2",
    "bt>=1.1.0",
    "pyright>=1.1.386",
    "binance-historical-data>=0.1.13",
    "python-binance>=1.0.19",
    "pytest>=8.2.2",
    "pip>=24.2",
    "loguru>=0.7.2",
    "orjson>=3.10.6",
    "pre-commit>=3.7.1",
    "commitizen>=3.27.0",
    "pyright>=1.1.385",
    "ipython<=8.0.0",
    "matplotlib>=3.9.2",
    "ruff>=0.6.8",
    "mkdocs-material>=9.5.38",
    "mkdocstrings[python]>=0.26.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2.9",
    "mkdocs-git-committers-plugin-2>=2.3.0",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mike>=2.1.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-section-index>=0.3.9",
    "mkdocs-autorefs>=1.2.0",
    "numba>=0.53.1",
    "humanize>=4.11.0",
    "quantstats==0.0.60",
    "mplfinance>=0.12.10b0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zenbt", "src/data", "src/sdk", "src/grafana"]

[tool.maturin]
profile = "release"
python-source = "src"
module-name = 'zenbt.zbt'
manifest-path = "rs/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportAttributeAccessIssue = false
include = ["./src/*.py"]
exclude = ["./src/*.pyi"]

[tool.pytest.ini_options]
norecursedirs = ["docker"]

[tool.ruff.lint]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F"]
# Never enforce `E501` (line length violations).
ignore = ["E501", "F401", "F841"]
# Never try to fix `F401` (unused imports).
unfixable = ["F401", "F841"]
