[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs"
crate-type = ["cdylib"]



[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = {version = "1.35.0", features=['maths', 'serde', "serde-with-float"]}
rust_decimal_macros = "1.34.2"
pyi_macros = { path = "./pyi-macros",  optional = true }

[dependencies.pyo3]
version = "0.21.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["rust_decimal", "abi3-py38"]

[features]
pyi = ["pyi_macros"]
